--- a/public/templates/flop_story.html
+++ b/public/templates/flop_story.html
@@ -66,40 +66,35 @@
                 <button type="submit" id="submitFlopStory" class="w-full bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Quelle est l'histoire la plus floppesque ?</button>
             </form>
         </div>
-        
-        <script>
-            const vote= document.getElementById('submitFlopStory');
-            vote.addEventListener('submit', function(event) {
-                event.preventDefault();
-                const selectedFlop = document.querySelector('input[name="flop"]:checked').value;
-                alert('Vous avez voté pour : ' + selectedFlop);
-            });
-        </script>
-        
-
-        
     </div>
+
     <script>
-        import { bootstrapExtra } from "@workadventure/scripting-api-extra";
-        function nextQuestion(current) {
-        var currentQuestion = document.getElementById('question' + current);
-        var nextQuestion = document.getElementById('question' + (current + 1));
-        if (nextQuestion) {
-            currentQuestion.classList.add('hidden');
-            nextQuestion.classList.remove('hidden');
-        } else {
-            submitFlopStory();  // Soumission de flop story pour la dernière question
-        }
-    }
-        
-    function submitFlopStory() {
-        document.getElementById('flopForm').addEventListener('submit', function(event) {
+
+        const vote= document.getElementById('submitFlopStory');
+        vote.addEventListener('submit', function(event) {
             event.preventDefault();
             const selectedFlop = document.querySelector('input[name="flop"]:checked').value;
             alert('Vous avez voté pour : ' + selectedFlop);
         });
-    }
-    func
+
+        function nextQuestion(current) {
+            const currentQuestion = document.getElementById('question' + current);
+            const nextQuestion = document.getElementById('question' + (current + 1));
+            if (nextQuestion) {
+                currentQuestion.classList.add('hidden');
+                nextQuestion.classList.remove('hidden');
+            } else {
+                submitFlopStory();  // Soumission de flop story pour la dernière question
+            }
+        }
+    
+        function submitFlopStory() {
+            document.getElementById('flopForm').addEventListener('submit', function(event) {
+                event.preventDefault();
+                const selectedFlop = document.querySelector('input[name="flop"]:checked').value;
+                alert('Vous avez voté pour : ' + selectedFlop);
+            });
+        }
     </script>
 </body>
 </html>
