--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,5 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@font-face {
+  font-family: "Aachen";
+  src: url("/fonts/aachen_bold_plain-webfont.woff2")  format('woff2');
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
